# RustProject

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: server_automation.yml
Projet/beacon/: Cargo.toml
Projet/beacon/src/: beacon.service  beacon.sh  main.rs
Projet/beacon/src/toto/: date.txt
migrations/2022-12-08-234521_agents/: up.sql
migrations/2022-12-08-234524_commands/: down.sql  up.sql
migrations/2022-12-09-004446_result/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
